--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^2.1.3",
     "react-transition-group": "^4.4.2",
+    "serve": "^13.0.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
